Tweak module 5 examples

--- a/units/unit-1/module-5/example-11/index.html
+++ b/units/unit-1/module-5/example-11/index.html
@@ -5,27 +5,33 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500"></svg>
     <script>
       function render(data){
+        
+        // General Update Pattern
         var svg = d3.selectAll("svg")
           .data([null]);
         svg = svg
-          .enter().append("svg")
+          .enter()
+          .append("svg")
             .attr("width", 960)
             .attr("height", 500)
           .merge(svg);
         
-        var circles = svg.selectAll("circle")
+        // General Update Pattern
+        var circles = svg
+          .selectAll("circle")
           .data(data);
         circles
-          .enter().append("circle")
+          .enter()
+          .append("circle")
             .attr("cy", 250)
             .attr("r", 100)
           .merge(circles)
             .attr("cx", function (d){ return d; });
         circles
-          .exit().remove();
+          .exit()
+            .remove();
       }
       render([200]);
       render([300, 500, 700]);
