--- a/units/unit-1/module-5/example-2/index.html
+++ b/units/unit-1/module-5/example-2/index.html
@@ -16,7 +16,8 @@
           .data(data)
             .attr("cx", function (d){ return d; })
             .attr("fill", "orange") // This color applies to the "Update" selection.
-          .enter().append("circle")
+          .enter()
+          .append("circle")
             .attr("cx", function (d){ return d; })
             .attr("cy", 250)
             .attr("r", 100)
