--- a/units/unit-1/module-5/example-1/index.html
+++ b/units/unit-1/module-5/example-1/index.html
@@ -15,7 +15,8 @@
         .data([300, 500, 700])
           .attr("cx", function (d){ return d; })
           .attr("fill", "orange") // This color applies to the "Update" selection.
-        .enter().append("circle")
+        .enter()
+        .append("circle")
           .attr("cx", function (d){ return d; })
           .attr("cy", 250)
           .attr("r", 100)
