--- a/units/unit-1/module-5/example-10/index.html
+++ b/units/unit-1/module-5/example-10/index.html
@@ -10,18 +10,22 @@
     </svg>
     <script>
       function render(data){
+        
+        // General Update Pattern
         var circles = d3.select("svg")
           .selectAll(".dot")
           .data(data);
         circles
-          .enter().append("circle")
+          .enter()
+          .append("circle")
             .attr("class", "dot")
             .attr("cy", 250)
             .attr("r", 100)
           .merge(circles)
             .attr("cx", function (d){ return d; });
         circles
-          .exit().remove();
+          .exit()
+            .remove();
       }
       render([300, 500]);
       render([300]);
