--- a/units/unit-1/module-5/example-7/index.html
+++ b/units/unit-1/module-5/example-7/index.html
@@ -14,13 +14,15 @@
             .attr("cx", function (d){ return d; })
             .attr("fill", "orange"); // This color applies to the "Update" selection.
         circles
-          .enter().append("circle")
+          .enter()
+          .append("circle")
             .attr("cx", function (d){ return d; })
             .attr("cy", 250)
             .attr("r", 100)
             .attr("fill", "green"); // This color applies to the "Enter" selection.
         circles
-          .exit().remove();
+          .exit()
+            .remove();
       }
       render([200]);
       render([300, 500, 700]);
