--- a/units/unit-1/module-5/example-2/index.html
+++ b/units/unit-1/module-5/example-2/index.html
@@ -5,10 +5,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cy="250" r="100"></circle>
-      <circle cy="250" r="100"></circle>
-    </svg>
+    <svg width="960" height="500"></svg>
     <script>
       function render(data){
         d3.select("svg")
