--- a/units/unit-1/module-5/example-3/index.html
+++ b/units/unit-1/module-5/example-3/index.html
@@ -20,7 +20,7 @@
             .attr("r", 100)
             .attr("fill", "green"); // This color applies to the "Enter" selection.
       }
-      render([200]);
+      render([300, 500]);
       render([300, 500, 700]);
     </script>
   </body>
