Iterate on module 5

--- a/units/unit-1/module-5/example-9/index.html
+++ b/units/unit-1/module-5/example-9/index.html
@@ -24,12 +24,10 @@
           .merge(circles)
             .attr("cx", function (d){ return d; });
       }
-      render([300, 500, 700]);
-      render([300, 500]);
-      //render([300]); // Tests Exit
-      //render([500]); // Tests Update
-      //render([500, 700]); // Tests Enter
-      //render([200, 400, 600, 800]); // Tests Enter + Update
+      render([300, 500, 700]); // Tests Enter
+      render([300]); // Tests Exit
+      render([500]); // Tests Update
+      render([200, 400, 600, 800]); // Tests Enter + Update
     </script>
   </body>
 </html>
