--- a/units/unit-1/module-5/example-6/index.html
+++ b/units/unit-1/module-5/example-6/index.html
@@ -25,7 +25,7 @@
             .attr("fill", "green"); // This color applies to the "Enter" selection.
       }
       render([300, 500, 700]);
-      render([300, 500]);
+      render([300]);
     </script>
   </body>
 </html>
