Iterate on module 5

--- a/units/unit-1/module-5/example-10/index.html
+++ b/units/unit-1/module-5/example-10/index.html
@@ -27,10 +27,9 @@
           .merge(points)
             .attr("cx", function (d){ return d; });
       }
-      render([300, 500, 700]); // Tests Enter
-      render([300]); // Tests Exit
-      render([500]); // Tests Update
-      render([200, 400, 600, 800]); // Tests Enter + Update
+      render([300, 500, 700]); // Enter
+      render([200, 400, 600, 800]); // Enter + Update
+      //render([]); // Exit
     </script>
   </body>
 </html>
