--- a/units/unit-1/module-5/example-3/index.html
+++ b/units/unit-1/module-5/example-3/index.html
@@ -20,8 +20,8 @@
             .attr("r", 100)
             .attr("fill", "green"); // This color applies to the "Enter" selection.
       }
-      render([300, 500]);
-      render([300, 500, 700]);
+      render([200, 400]); // Enter
+      render([300, 500, 700]);  // Update + Enter
     </script>
   </body>
 </html>
