--- a/units/unit-1/module-5/example-8/index.html
+++ b/units/unit-1/module-5/example-8/index.html
@@ -22,10 +22,8 @@
             .attr("cy", 250)
             .attr("r", 100);
       }
-      render([300, 500, 700]); // Tests Enter
-      render([300]); // Tests Exit
-      render([500]); // Tests Update
-      render([200, 400, 600, 800]); // Tests Enter + Update
+      render([300, 500, 700]); // Enter
+      render([200, 400, 600, 800]); // Enter + Update
     </script>
   </body>
 </html>
