--- a/units/unit-1/module-5/example-2/index.html
+++ b/units/unit-1/module-5/example-2/index.html
@@ -20,7 +20,7 @@
             .attr("r", 100)
             .attr("fill", "green"); // This color applies to the "Enter" selection.
       }
-      render([300, 500, 700]);
+      render([300, 500, 700]); // Enter
     </script>
   </body>
 </html>
