--- a/units/unit-1/module-5/example-4/index.html
+++ b/units/unit-1/module-5/example-4/index.html
@@ -20,8 +20,8 @@
             .attr("r", 100)
             .attr("fill", "green"); // This color applies to the "Enter" selection.
       }
-      render([300, 500, 700]);
-      render([300]);
+      render([300, 500, 700]); // Enter
+      render([]); // Exit (not handled)
     </script>
   </body>
 </html>
