Upgrade example-viewer

--- a/index.html
+++ b/index.html
@@ -10,23 +10,6 @@
       https://github.com/curran/example-viewer
     -->
 
-    <!-- For offline development (first run fetchLibs.sh) -->
-    <!--
-    <script src="/libs/d3.min.js"></script>
-    <script src="/libs/codemirror.min.js"></script>
-    <script src="/libs/javascript.min.js"></script>
-    <script src="/libs/css.min.js"></script>
-    <script src="/libs/xml.min.js"></script>
-    <script src="/libs/htmlmixed.min.js"></script>
-    <link rel="stylesheet" href="/libs/codemirror.min.css">
-    <script src="/libs/inlet.min.js"></script>
-    <link rel="stylesheet" href="/libs/inlet.css">
-    <script src="redux.min.js"></script>
-    <script src="redux-thunk.min.js"></script>
-    -->
-    
-    <!-- For cloud hosting -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/mode/javascript/javascript.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/mode/css/css.min.js"></script>
@@ -35,398 +18,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/codemirror.min.css">
     <script src="https://enjalot.github.io/Inlet/inlet.min.js"></script>
     <link rel="stylesheet" href="https://enjalot.github.io/Inlet/inlet.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux-thunk/2.2.0/redux-thunk.min.js"></script>
 
-    <style>
-
-      body {
-        margin: 0px;
-        font-family: Sans-Serif;
-      }
-
-      .CodeMirror {
-        font-size: 2.6rem;
-        height: auto;
-      }
-
-      /* Adds a shadow effect. Inspired by Material Design "Cards". */
-      .shadow {
-        box-shadow: 1px 1px 4px grey;
-      }
-
-      .header {
-        padding: 1rem;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        right: 0px;
-        z-index: 3;
-        text-shadow:
-          0px 0px 5px white,
-          0px 0px 10px white,
-          0px 0px 15px white,
-          0px 0px 20px white,
-          0px 0px 25px white,
-          0px 0px 30px white,
-          0px 0px 35px white,
-          0px 0px 40px white,
-          0px 0px 45px white,
-          0px 0px 50px white
-        ;
-        background: linear-gradient(white, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
-      }
-      .header-breadcrumbs {
-        font-size: 2.5rem;
-        color: #999;
-      }
-      .header-title {
-        font-size: 5rem;
-      }
-      .header-spacer {
-        margin-top: 20rem;
-      }
-
-      .runner {
-        position: fixed;
-        top: 0px;
-        right: 0px;
-        background-color: white;
-      }
-
-      .overlay {
-        position: fixed;
-        top: 0px;
-        bottom: 0px;
-        right: 0px;
-        left: 0px;
-        pointer-events: none;
-        z-index: 6; /* Above everything else. */
-      }
-
-    </style>
+    <link rel="stylesheet" href="example-viewer-dist/styles.css">
   </head>
   <body>
-    <script>
-(function (){
-
-  // The main entry point for the application.
-  (function main(){
-
-    // Set up Redux.
-    var actions = Actions(),
-        reducer = Reducer(),
-        store = Redux.createStore(reducer, Redux.applyMiddleware(ReduxThunk.default));
-
-    // Initialize application components.
-    var router = Router(store.dispatch, actions),
-        editor = Editor(store.dispatch, actions),
-        header = Header(),
-        runner = Runner(),
-        notifier = Notifier();
-    Keyboard(store.dispatch, actions);
-
-    // Re-render the application when state changes.
-    store.subscribe(function (){
-      var state = store.getState();
-      d3.select("body")
-        .call(header, state)
-        .call(editor, state)
-        .call(runner, state)
-        .call(notifier, state);
-      router(state);
-    });
-  }());
-
-
-  // Redux action creators.
-  function Actions(){
-    var actions = {
-
-      // After navigation occurred (after a route change).
-      navigated: function (params){ return { type: "NAVIGATED", params: params }; },
-
-      // When the user wants to go to the next example.
-      next: function (){ return { type: "NEXT" }; },
-
-      // When the user wants to go to the previous example.
-      previous: function (){ return { type: "PREVIOUS" }; },
-
-      // When the HTML content is changed.
-      changeHtml: function (html){ return { type: "CHANGE_HTML", html: html}; },
-
-      // Fetches the HTML content from the server (uses thunk middleware).
-      fetchHtml: function (){
-        return function (dispatch, getState){
-          var params = getState().params;
-          var url = [
-            "units",
-            "unit-" + params.unit,
-            "module-" + params.module,
-            "example-" + params.example,
-            "index.html"
-          ].join("/");
-          d3.request(url).get(function (xhr){
-            dispatch(actions.changeHtml(xhr.responseText));;
-          });
-        }
-      },
-
-      // Saves the HTML content to the server (uses thunk middleware).
-      save: function (){
-        return function (dispatch, getState){
-          d3.request("save")
-            .header("Content-Type", "application/json")
-            .post(JSON.stringify(getState()), function (xhr){
-              dispatch(actions.saved(xhr.responseText));
-            });
-        };
-      },
-      
-      // After a save occurred.
-      saved: function (message){
-        return { type: "SAVED", message: message, time: Date.now() };
-      }
-    };
-    return actions;
-  }
-
-
-  // The Redux reducer.
-  function Reducer(){
-    return function (state, action){
-      state = state || {};
-      switch (action.type) {
-        case "NAVIGATED": return Object.assign(state, { params: action.params });
-        case "CHANGE_HTML": return Object.assign(state, { html: action.html });
-        case "NEXT": return go(state, 1);
-        case "PREVIOUS": return go(state, -1);
-        case "SAVED": return Object.assign(state, { notify: action });
-        default: return state;
-      }
-    };
-
-    // Goes to the next or previous example.
-    function go(state, increment){
-      var FORWARD = increment === 1;
-      return Object.assign(state, {
-        params: Object.assign(state.params, {
-          example: state.params.example + increment
-        }),
-        notify: {
-          message: FORWARD ? "→" : "←",
-          position: FORWARD ? 0.75 : 0.25,
-          size: 80,
-          time: Date.now()
-        }
-      });
-    }
-  }
-
-
-  // Deals with the route, kept in the fragment identifier.
-  function Router(dispatch, actions){
-    var defaultParams = { unit: 1, module: 1, example: 1 };
-
-    navigate();
-    window.addEventListener("hashchange", navigate);
-    function navigate(){
-      var params = parseHash();
-      if(params){
-        dispatch(actions.navigated(params));
-        dispatch(actions.fetchHtml());
-      } else {
-        location.hash = encodeHash(defaultParams);
-      }
-    }
-
-    function parseHash(){
-      var path = location.hash.substr(1).split("/");
-      if(path.length === 3){
-        return { unit: +path[0], module: +path[1], example: +path[2] };
-      }
-      return null;
-    }
-
-    function encodeHash(params){
-      return "#" + params.unit + "/" + params.module + "/" + params.example;
-    }
-
-    return function (state){
-      var newHash = encodeHash(state.params);
-      if(location.hash != newHash){
-        location.hash = newHash;
-      }
-    }
-  }
-
-
-  // User interface component for the header text (top left).
-  function Header(){
-    return function (selection, state){
-      var header = selection.selectAll(".header").data([1]);
-      var headerEnter = header.enter().append("div").attr("class", "header");
-      headerEnter.append("div").attr("class", "header-breadcrumbs");
-      headerEnter.append("div").attr("class", "header-title");
-      header = header.merge(headerEnter);
-
-      selection.selectAll(".header-spacer").data([1])
-        .enter().append("div").attr("class", "header-spacer");
-
-      if(state.params){
-        header.select(".header-breadcrumbs")
-          .text([
-            "Unit " + state.params.unit,
-            "Module " + state.params.module,
-            "Example " + state.params.example
-          ].join(" / "));
-      }
-
-      if(state.html){
-        header.select(".header-title")
-          .text(state.html.match(/title>(.*?)</)[1]);
-      }
-    }
-  }
-
-
-  // User interface component for the code editor.
-  function Editor(dispatch, actions){
-    var codemirror = d3.local();
-    return function (selection, state){
-      var editor = selection.selectAll(".editor").data([1]);
-      editor = editor.merge(
-        editor.enter().append("div")
-          .attr("class", "editor shadow")
-          .each(function (){
-            var cm = CodeMirror(this, {
-              lineNumbers: false,
-              mode: "htmlmixed"
-            });
-
-            // Inlet provides the interactive sliders and color pickers.
-            Inlet(cm);
-
-            cm.on("change", function (editor, change){
-              if(change.origin === "setValue") return;
-              dispatch(actions.changeHtml(cm.getValue()));
-            });
-
-            codemirror.set(this, cm);
-          }));
-
-      if(state.html){
-        editor.each(function (){
-          var cm = codemirror.get(this);
-          if(cm.getValue() !== state.html){
-            cm.setValue(state.html);
-          }
-        });
-      }
-    };
-  }
-
-
-  // Translates global keyboard events into dispatched actions.
-  function Keyboard(dispatch, actions){
-    window.addEventListener("keydown", function (e){
-      var CTRL = e.ctrlKey,
-          S = e.which === 83,
-          RIGHT = e.which === 39,
-          LEFT = e.which === 37;
-      if(CTRL && S){ dispatch(actions.save()); e.preventDefault(); }
-      if(CTRL && RIGHT){ dispatch(actions.next()); }
-      if(CTRL && LEFT){ dispatch(actions.previous()); }
-    });
-  }
-
-
-  // User interface component for the running example (top right).
-  function Runner(){
-    var previousHtml = "",
-        currentHtml = "",
-        BACK = 3, // CodeMirror's z-index is 2, this will be above that.
-        FRONT = 4, // This is for the "front buffer", visible to the user.
-        buffers = [BACK, FRONT],
-        root,
-        needsSwap = false,
-        framesPerSecond = 10; // Seems to be the fastest rate without flicker.
-
-    setInterval(function (){
-      if(root){
-        if(needsSwap){
-          buffers = buffers.reverse();
-          root.selectAll(".runner").data(buffers)
-            .style("z-index", function (z) { return z; });
-          needsSwap = false;
-        }
-        if(currentHtml !== previousHtml){
-          previousHtml = currentHtml;
-          root.selectAll(".runner")
-            .filter(function (z){ return z === BACK; })
-            .attr("srcdoc", currentHtml);
-          needsSwap = true;
-        }
-      }
-    }, 1000 / framesPerSecond);
-
-    return function (selection, state){
-      root = selection;
-      root.selectAll(".runner").data(buffers)
-        .enter().append("iframe")
-          .attr("class", "shadow runner")
-          .attr("width", "960") // 960 X 500 is standard for bl.ocks.org.
-          .attr("height", "500")
-          .attr("marginwidth", "0") // Have no margin to match with bl.ocks.org.
-          .attr("marginheight", "0")
-          .attr("frameborder", "0px")
-          .attr("scrolling", "no");
-      currentHtml = state.html;
-    };
-  }
-
-
-  // User interface component for the notification overlay (displays "Saved!").
-  function Notifier(){
-    var previousTime = 0;
-    return function (selection, state){
-      selection.selectAll(".overlay").data([1])
-        .enter().append("div").attr("class", "overlay")
-        .append("svg");
-
-      // Trigger the notification based on a changed timestamp.
-      if(state.notify && state.notify.time !== previousTime){
-        var div = selection.select(".overlay").node(),
-            svg = d3.select(div).select("svg"),
-            width = div.clientWidth,
-            height = div.clientHeight,
-            position = state.notify.position || 0.5,
-            size = state.notify.size || 20;
-
-        svg.attr("width", width).attr("height", height);
-
-        var text = svg.selectAll("text").data([1]);
-        text
-          .enter().append("text")
-            .style("text-shadow", "0px 0px 10px white")
-            .attr("text-anchor", "middle")
-            .attr("alignment-baseline", "middle")
-          .merge(text)
-            .interrupt("pop")
-            .attr("x", width * position)
-            .attr("y", height / 2)
-            .attr("font-size", size + "em")
-            .attr("opacity", 1)
-            .text(state.notify.message)
-          .transition("pop").duration(700).ease(d3.easeLinear)
-            .attr("font-size", (size * 1.2) + "em")
-            .attr("opacity", 0);
-
-        previousTime = state.notify.time;
-      }
-    };
-  }
-}());
-    </script>
+    <script src="example-viewer-dist/bundle.min.js"> </script>
   </body>
 </html>
