--- a/units/unit-02/module-01/example-01/index.html
+++ b/units/unit-02/module-01/example-01/index.html
@@ -7,6 +7,9 @@
   <body>
     <svg width="960" height="500"></svg>
     <script>
+      
+      // Prerequisite
+      // From Unit 1 / Module 4 / Example 9
       var data = [
         { x: 300, y:150, r: 44 },
         { x: 500, y:350, r: 51 },
