--- a/units/unit-02/module-01/example-03/index.html
+++ b/units/unit-02/module-01/example-03/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pretty Printing JSON</title>
+    <title>Bubbles with GUP</title>
+    <!-- GUP = General Update Pattern -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <svg width="960" height="500"></svg>
     <script>
-      var data = [
+      
+      function render(data){
+        var circles = d3.select("svg")
+          .selectAll("circle")
+          .data(data);
+        circles
+          .exit()
+          	.remove();
+        circles
+          .enter()
+          .append("circle")
+            .attr("fill", "rgba(255, 0, 0, 0.3)")
+            .attr("stroke", "black")
+          .merge(circles)
+            .attr("cx", function (d){ return d.x; })
+            .attr("cy", function (d){ return d.y; })
+            .attr("r", function (d){ return d.r; });
+      }
+      
+      render([
         { x: 300, y:150, r: 44 },
         { x: 500, y:350, r: 51 },
         { x: 700, y:200, r: 33 },
@@ -26,11 +47,7 @@
         { x: 90, y:431, r: 6 },
         { x: 90, y:287, r: 11 },
         { x: 630, y:145, r: 11 }
-      ];
-      d3.select("body")
-      	.append("pre")
-          .style("font-size", "20pt")
-          .text(JSON.stringify(data, null, 2));
+      ]);
     </script>
   </body>
 </html>
