--- a/units/unit-02/module-01/example-02/index.html
+++ b/units/unit-02/module-01/example-02/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Raw Data</title>
+    <title>Using Merge</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <svg width="960" height="500"></svg>
     <script>
-      var data = [
-        { x: 300, y:150, r: 44 },
-        { x: 500, y:350, r: 51 },
-        { x: 700, y:200, r: 33 },
-        { x: 583, y:114, r: 77 },
-        { x: 844, y:218, r: 74 },
-        { x: 257, y:316, r: 44 },
-        { x: 466, y:200, r: 31 },
-        { x: 179, y:414, r: 50 },
-        { x: 179, y:231, r: 36 },
-        { x: 376, y:326, r: 26 },
-        { x: 676, y:118, r: 68 },
-        { x: 626, y:199, r: 68 },
-        { x: 510, y:269, r: 15 },
-        { x: 510, y:419, r: 15 },
-        { x: 311, y:388, r: 15 },
-        { x: 50, y:388, r: 6 },
-        { x: 90, y:431, r: 6 },
-        { x: 90, y:287, r: 11 },
-        { x: 630, y:145, r: 11 }
-      ];
-      d3.select("body")
-      	.append("pre")
-          .style("font-size", "20pt")
-          .text(JSON.stringify(data));
+      
+      // Prerequisite
+      // From Unit 1 / Module 5 / Example 9
+      function render(data){
+        
+        // General Update Pattern
+        var circles = d3.select("svg")
+          .selectAll("circle")
+          .data(data);
+        circles
+          .exit()
+          	.remove();
+        circles
+          .enter()
+          .append("circle")
+            .attr("cy", 250)
+            .attr("r", 100)
+          .merge(circles)
+            .attr("cx", function (d){ return d; });
+      }
+      render([300, 500, 700]); // Enter
+      render([200, 400, 600, 800]); // Enter + Update
+      //render([]); // Exit
     </script>
   </body>
 </html>
