--- a/units/unit-02/module-01/example-10/index.html
+++ b/units/unit-02/module-01/example-10/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bubbles from CSV</title>
+    <title>Exercise</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500"></svg>
     <script>
       
+      // Your task is to set the "fill"
+      // attribute of the circles to the
+      // values from the "color" column
+      // of the CSV file.
       function render(data){
         var circles = d3.select("svg")
           .selectAll("circle")
@@ -18,7 +22,7 @@
         circles
           .enter()
           .append("circle")
-            .attr("fill", "rgba(255, 0, 0, 0.3)")
+            .attr("fill", "rgba(255, 0, 0, 0.3)") // Hint: move this down into merge.
             .attr("stroke", "black")
           .merge(circles)
             .attr("cx", function (d){ return d.x; })
