--- a/units/unit-02/module-01/example-03/index.html
+++ b/units/unit-02/module-01/example-03/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bubbles with GUP</title>
-    <!-- GUP = General Update Pattern -->
+    <title>Using babel-standalone</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500"></svg>
-    <script>
-      
+    <script type="text/babel" data-presets="es2015">
       function render(data){
-        var circles = d3.select("svg")
+        const circles = d3.select("svg")
           .selectAll("circle")
           .data(data);
         circles
@@ -22,9 +21,9 @@
             .attr("fill", "rgba(255, 0, 0, 0.3)")
             .attr("stroke", "black")
           .merge(circles)
-            .attr("cx", function (d){ return d.x; })
-            .attr("cy", function (d){ return d.y; })
-            .attr("r", function (d){ return d.r; });
+            .attr("cx", d => d.x)
+            .attr("cy", d => d.y)
+            .attr("r", d => d.r);
       }
       
       render([
