Fix issue with .babelrc

--- a/units/unit-02/module-03/example-22/index.html
+++ b/units/unit-02/module-03/example-22/index.html
@@ -9,7 +9,8 @@
     <script>
       
       // Your task is to change the X column
-      // from petalLength to sepalWidth.
+      // from petalLength to sepalWidth,
+      // and observe how the scaling changes.
       
       const svg = d3.select("svg");
       const width = +svg.attr("width");
