--- a/units/unit-02/module-03/example-07/index.html
+++ b/units/unit-02/module-03/example-07/index.html
@@ -19,7 +19,7 @@
           }
         });
         
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
