--- a/units/unit-02/module-03/example-08/index.html
+++ b/units/unit-02/module-03/example-08/index.html
@@ -24,7 +24,7 @@
         
         const xMax = max(data, d => d.sepalLength);
         
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
