--- a/units/unit-02/module-03/example-13/index.html
+++ b/units/unit-02/module-03/example-13/index.html
@@ -19,7 +19,7 @@
         const xMax = d3.max(data, x);
         const yMax = d3.max(data, y);
         
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
