--- a/units/unit-02/module-03/example-14/index.html
+++ b/units/unit-02/module-03/example-14/index.html
@@ -20,7 +20,7 @@
         const yMin = d3.min(data, y);
         const yMax = d3.max(data, y);
         
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
