--- a/units/unit-02/module-03/example-17/index.html
+++ b/units/unit-02/module-03/example-17/index.html
@@ -18,7 +18,7 @@
         const xDomain = d3.extent(data, x);
         const yDomain = d3.extent(data, y);
         
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
