--- a/units/unit-02/module-03/example-07/index.html
+++ b/units/unit-02/module-03/example-07/index.html
@@ -13,7 +13,7 @@
       function render(data){
         
         let xMax = -Infinity;
-        data.forEach((d) => {
+        data.forEach(d => {
           if(d.sepalLength > xMax){
             xMax = d.sepalLength;
           }
@@ -28,10 +28,10 @@
         circles
           .enter()
           .append("circle")
+            .attr("r", 6)
           .merge(circles)
-            .attr("cx", d => d.sepalLength * width / xMax)
-            .attr("cy", d => d.petalLength * 70)
-            .attr("r", 6);
+            .attr("cx", d => d.sepalLength / xMax * width)
+            .attr("cy", d => d.petalLength * 70);
       }
             
       function type(d){
