--- a/units/unit-02/module-03/example-08/index.html
+++ b/units/unit-02/module-03/example-08/index.html
@@ -12,7 +12,7 @@
       
       function max(data, value){
         let valueMax = -Infinity;
-        data.forEach((d) => {
+        data.forEach(d => {
           if(value(d) > valueMax){
             valueMax = value(d);
           }
@@ -33,10 +33,10 @@
         circles
           .enter()
           .append("circle")
+            .attr("r", 6)
           .merge(circles)
-            .attr("cx", d => d.sepalLength * width / xMax)
-            .attr("cy", d => d.petalLength * 70)
-            .attr("r", 6);
+            .attr("cx", d => d.sepalLength / xMax * width)
+            .attr("cy", d => d.petalLength * 70);
       }
             
       function type(d){
