--- a/units/unit-02/module-01/example-01/index.html
+++ b/units/unit-02/module-01/example-01/index.html
@@ -12,8 +12,10 @@
       // Bubbles #1/4/9
       // Using Merge #1/5/9
       
+      var svg = d3.select("svg");
+      
       function render(data){
-        var circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
