--- a/units/unit-02/module-01/example-03/index.html
+++ b/units/unit-02/module-01/example-03/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Using babel-standalone</title>
+    <title>Using Babel Standalone</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </head>
   <body>
     <svg width="960" height="500"></svg>
     <script type="text/babel" data-presets="es2015">
+      const svg = d3.select("svg");
+      
       function render(data){
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
