--- a/units/unit-02/module-02/example-01/index.html
+++ b/units/unit-02/module-02/example-01/index.html
@@ -7,8 +7,10 @@
   <body>
     <svg width="960" height="500"></svg>
     <script>
+      const svg = d3.select("svg");
+      
       function render(data){
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
