--- a/units/unit-02/module-03/example-04/index.html
+++ b/units/unit-02/module-03/example-04/index.html
@@ -7,9 +7,10 @@
   <body>
     <svg width="960" height="500"></svg>
     <script>
+      const svg = d3.select("svg");
       
       function render(data){
-        const circles = d3.select("svg")
+        const circles = svg
           .selectAll("circle")
           .data(data);
         circles
@@ -18,10 +19,10 @@
         circles
           .enter()
           .append("circle")
+            .attr("r", 6)
           .merge(circles)
             .attr("cx", d => d.sepalLength * 50)
-            .attr("cy", d => d.petalLength * 50)
-            .attr("r", 6);
+            .attr("cy", d => d.petalLength * 50);
       }
             
       function type(d){
