--- a/units/unit-02/module-04/example-07/index.html
+++ b/units/unit-02/module-04/example-07/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Margin Convention ES6</title>
+    <title>Exercise</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
