--- a/units/unit-02/module-01/example-01/index.html
+++ b/units/unit-02/module-01/example-01/index.html
@@ -11,19 +11,12 @@
       // A fusion of previous examples:
       // Bubbles #1/4/9
       // Using Merge #1/5/9
-      
       var svg = d3.select("svg");
-      
       function render(data){
-        const circles = svg
-          .selectAll("circle")
-          .data(data);
+        const circles = svg.selectAll("circle").data(data);
+        circles.exit().remove();
         circles
-          .exit()
-            .remove();
-        circles
-          .enter()
-          .append("circle")
+          .enter().append("circle")
             .attr("fill", "rgba(255, 0, 0, 0.3)")
             .attr("stroke", "black")
           .merge(circles)
