--- a/units/unit-02/module-01/example-02/index.html
+++ b/units/unit-02/module-01/example-02/index.html
@@ -10,15 +10,10 @@
       const svg = d3.select("svg");
       
       function render(data){
-        const circles = svg
-          .selectAll("circle")
-          .data(data);
+        const circles = svg.selectAll("circle").data(data);
+        circles.exit().remove();
         circles
-          .exit()
-            .remove();
-        circles
-          .enter()
-          .append("circle")
+          .enter().append("circle")
             .attr("fill", "rgba(255, 0, 0, 0.3)")
             .attr("stroke", "black")
           .merge(circles)
