--- a/units/unit-01/module-06/example-01/index.html
+++ b/units/unit-01/module-06/example-01/index.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Using Merge</title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <title>Background Circle</title>
   </head>
   <body>
-    <svg width="960" height="500"></svg>
-    <script>
-      // From previous module #1/5/9
-      function render(data){
-        
-        // General Update Pattern
-        var circles = d3.select("svg")
-          .selectAll("circle")
-          .data(data);
-        circles
-          .exit()
-            .remove();
-        circles
-          .enter()
-          .append("circle")
-            .attr("cy", 250)
-            .attr("r", 100)
-          .merge(circles)
-            .attr("cx", function (d){ return d; });
-      }
-      render([300, 500, 700]); // Enter
-      render([200, 400, 600, 800]); // Enter + Update
-      //render([]); // Exit
-    </script>
+    <svg width="960" height="500">
+      <circle cx="480" cy="250" r="250" fill="rgba(255, 0, 0, 0.5)"></circle>
+    </svg>
   </body>
 </html>
