--- a/units/unit-01/module-06/example-05/index.html
+++ b/units/unit-01/module-06/example-05/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Case for Classes</title>
+    <title>Managing One Thing</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500">
-      <circle cx="480" cy="250" r="250" fill="rgba(255, 0, 0, 0.5)"></circle>
-    </svg>
     <script>
       function render(data){
-        var circles = d3.select("svg")
+        var svg = d3.select("body")
+          .selectAll("svg")
+          .data([null]);
+        svg = svg
+          .enter()
+          .append("svg")
+            .attr("width", 960)
+            .attr("height", 500)
+          .merge(svg);
+        
+        var circles = svg
           .selectAll("circle")
           .data(data);
-        circles
-          .exit()
-            .remove();
         circles
           .enter()
           .append("circle")
@@ -23,6 +27,8 @@
             .attr("r", 100)
           .merge(circles)
             .attr("cx", function (d){ return d; });
+        circles
+          .exit().remove();
       }
       render([300, 500]);
       render([300]);
